test: update controller tests to exclude security auto-configuration and add necessary mock beans